<resources>
    <string name="app_name">衣秀</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register_inputMobile">请输入手机号</string>
    <string name="register_inputPassword">设置登陆密码</string>
    <string name="register_inputEmail">设置邮箱</string>
    <string name="register_btn">注册</string>
    <string name="login_inputMobile">手机号</string>
    <string name="login_inputPassword">密码</string>
    <string name="login_btn">登陆</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_register">新用户注册</string>
    <string name="tab_home">首页</string>
    <string name="tab_category">分类</string>
    <string name="tab_collocation">酷搭</string>
    <string name="tab_display">SHOW</string>
    <string name="tab_person">我的</string>
    <string name="hint_login">点击登陆</string>
    <string name="text_myCollection">我的信息</string>
    <string name="text_myCollocation">关于</string>
    <string name="text_helpAndFeedback">帮助与反馈</string>
    <string name="text_setting">设置</string>
    <string name="text_quit">退出</string>
    <string name="text_send">发送</string>
    <string name="home_measure">尺寸对照</string>
    <string name="home_todayPush">今日穿搭</string>
    <string name="home_buyerShow">Show</string>
    <string name="home_weekPush">每周爆款</string>
    <string name="actionbar_cate">分类</string>
    <string name="actionbar_collo">推荐搭配</string>
    <string name="actionbar_display">Show</string>
    <string name="actionbar_todayPush">今日推荐</string>
    <string name="measure_sex">性别</string>
    <string name="measure_height">身高(cm)</string>
    <string name="measure_weight">体重(kg)</string>
    <string name="measure_next">下一步</string>
    <string name="todayPush_more">更多推荐</string>
    <string name="clothesBar_title">搭配</string>
    <string name="action_settings">Settings</string>
    <string name="example_time">2018-04-01</string>
    <string name="addNewCooment">评论</string>
    <string name="text_title">标题</string>
    <string name="text_content">内容</string>


</resources>
