<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gray"
    tools:context="cn.tzl.yishow.module_Login.activity.RegisterActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_centerInParent="true"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="46dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:background="@color/bg_black"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register_btn"
                android:textColor="@color/mywhite"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/register_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:hint="@string/register_inputMobile"
                android:inputType="phone"
                android:padding="15dp"
                android:textSize="16sp" />

            <!-- 分割线-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#c2c2c2">

            </LinearLayout>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:hint="@string/register_inputPassword"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="16sp" />

            <!-- 分割线-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#c2c2c2"></LinearLayout>

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:hint="@string/register_inputEmail"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="16sp" />

            <!-- 分割线-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c2c2c2"></LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="40dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_register"
                    android:background="#ef3737"
                    android:textColor="#ffffff"
                    android:text="@string/register_btn"/>
            </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/return_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="已有账号，返回登陆界面"
                android:textColor="@color/hint_gray"
                android:autoLink="all"
                android:layout_gravity="center"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>




</RelativeLayout>
