<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.tzl.yishow.NewCommentActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/comment_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/myblack"
            android:paddingBottom="10dp"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/iv_comment_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_white_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/addNewComment"
                android:textColor="@color/gray"
                android:textSize="@dimen/fontSizeL" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <EditText
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment_appBarLayout"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:padding="10dp"
        android:hint="@string/text_title"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerInParent="true"
        android:background="@drawable/black_background"
        android:layout_below="@id/add_title"
        android:layout_gravity="center|bottom"
        android:padding="8dp"
        app:cardCornerRadius="0dp">

    <EditText
        android:id="@+id/add_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:padding="8dp"
        android:gravity="top"
        android:hint="@string/text_content"
        android:inputType="textMultiLine"
        android:minLines="8"
        android:maxLines="12" />
  </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/card_content"
        android:layout_gravity="center|bottom"
        app:cardCornerRadius="10dp">

        <Button
            android:id="@+id/btn_addComment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loginbutton"
            android:text="@string/text_send"
            android:textColor="@color/mywhite"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>
</RelativeLayout>
