<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gray"
    android:fitsSystemWindows="true"
    tools:context="cn.tzl.yishow.module_Login.activity.LoginActivity">

    <!-- <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">

         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>

     </android.support.design.widget.AppBarLayout>-->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="60dp"
        android:src="@drawable/cover" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_black"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login_btn"
                android:textColor="@color/mywhite"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="50dp"
                        android:padding="10dp"
                        android:paddingEnd="50dp">

                        <EditText
                            android:id="@+id/login_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="#FFFFFF"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:hint="@string/login_inputMobile" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:paddingStart="50dp"
                        android:paddingEnd="50dp">

                        <EditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="#FFFFFF"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:hint="@string/login_inputPassword"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/loginbutton"
                    android:text="@string/login_btn"
                    android:textColor="@color/mywhite"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:autoLink="all"
                    android:padding="10dp"
                    android:text="@string/login_forget"
                    android:textColor="@color/hint_gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="all"
                    android:gravity="right"
                    android:padding="10dp"
                    android:text="@string/login_register"
                    android:textColor="@color/hint_gray"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!-- <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email"/>-->

</android.support.design.widget.CoordinatorLayout>
